--- a/Styles/style.css
+++ b/Styles/style.css
@@ -26,6 +26,10 @@
     background-color: grey;
     color: white;
 }
+.email2 button:hover{
+    background-color: red;
+    color: white;
+}
 /* navbar */
 .navbar{
     display: flex;
@@ -425,4 +429,55 @@ color: white;
 }
 .donate{
     margin-bottom: 80px;
+}
+/* chalenge2 */
+.chalenge2-dad{
+    text-align: center;
+    border-radius: 24px;
+    background: rgb(198, 228, 214);
+    margin-left: 160px;
+    margin-right: 160px;
+    padding: 80px 100px;
+    margin-bottom: 80px;
+}
+.chalenge2-heading h1{
+    font-size: 30px;
+font-weight: 700;
+}
+.chalenge2-heading{
+    height: 17px;
+    margin-bottom: 25px;
+}
+.chalenge2-content p{
+    font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.7);
+margin-bottom: 20px;
+}
+.email{
+    display: flex;
+    justify-content: center;
+}
+.email1 input{
+    color: rgba(14, 14, 14, 0.3);
+    border-radius: 8px 0px 0px 8px;
+
+background: rgb(255, 255, 255);
+width: 400px;
+height: 35px;
+border: none;
+padding-left: 30px;
+}
+.email2 button{
+    border-radius: 0px 8px 8px 0px;
+background: rgb(0, 106, 80);
+border: none;
+height: 37px;
+width: 100px;
+color: white;
+}
+.promis p{
+    font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.7);
 }
