--- a/Styles/style.css
+++ b/Styles/style.css
@@ -30,6 +30,9 @@
     background-color: red;
     color: white;
 }
+.foot-icon img:hover{
+    background-color: gray;
+}
 /* navbar */
 .navbar{
     display: flex;
@@ -480,4 +483,23 @@ color: white;
     font-size: 16px;
 font-weight: 400;
 color: rgba(14, 14, 14, 0.7);
+}
+/* footer */
+.foot-dad{
+    text-align: center;
+    padding: 50px 60px;
+}
+.foot-dad hr{
+    margin-left: 79px;
+    margin-left: 79px;
+    margin-bottom: 32px;
+}
+.foot-icon{
+    display: flex;
+    gap: 23px;
+    justify-content: center;
+}
+.foot-icon img{
+    width: 14px;
+height: 14px;
 }
